--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://05suraj.github.io/coronatracker",
+  "homepage": "https://05suraj.github.io/Corona",
   "name": "corona-traker",
   "version": "0.1.0",
   "private": true,
